# clara

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/src/clara/: config.py  database.py  deps.py  exceptions.py  main.py  metrics.py  middleware.py  redis.py  worker.py
backend/src/clara/activities/: api.py  models.py  repository.py  service.py
backend/src/clara/auth/: api.py  models.py  schemas.py  security.py  service.py  vault_api.py
backend/src/clara/base/: model.py  repository.py
backend/src/clara/contacts/: api.py  models.py  relationship_type_api.py  repository.py  schemas.py  service.py  sub_api.py  sub_schemas.py
backend/src/clara/customization/: custom_field_api.py  repository.py  schemas.py  service.py  template_api.py
backend/src/clara/dav_sync/: api.py  client.py  repository.py  service.py  sync_engine.py
backend/src/clara/files/: api.py  repository.py  schemas.py  service.py  storage.py
backend/src/clara/finance/: debt_api.py  debt_repository.py  debt_schemas.py  gift_api.py  gift_repository.py  gift_schemas.py
backend/src/clara/git_sync/: api.py  markdown.py  service.py  sync.py
backend/tests/: conftest.py  test_activities.py  test_auth.py  test_auth_security.py  test_base_repository.py  test_contact_sub_resources.py  test_contacts.py  test_csv_io.py  test_debts.py  test_digest.py  test_error_responses.py  test_files.py  test_gifts.py  test_journal.py  test_middleware.py  test_notifications.py  test_tasks.py
(+136 files in other folders)
